fixed #65 and searchbar vertical align problem

--- a/public/scss/sections/_searchbar.scss
+++ b/public/scss/sections/_searchbar.scss
@@ -14,7 +14,7 @@
 
 .searchbar-input-container {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 .searchbar-input-container-query {
